appveyor.yml fixed

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -10,4 +10,4 @@ build: off  # будем использовать свой скрипт сбор
 
 build_script:
   - chmod +x gradlew
-  - ./gradlew test --info  # запускаем тест, флаг --info позволяет выводить больше информации
+  - ./gradlew build test --info  # запускаем тест, флаг --info позволяет выводить больше информации
